structmeta-tests/tests/compile_fail/struct_meta/expected_name_value_rest_but_name_args.rs
#[structmeta_tests::attr_rest_name_value(value(10))]
fn my_func() {}

fn main() {}
