structmeta-tests/tests/compile_fail/struct_meta/expected_name_value_rest_but_name_args.stderr
error: expected `value = ...`, found `value`(...)
 --> $DIR/expected_name_value_rest_but_name_args.rs:1:42
  |
1 | #[structmeta_tests::attr_rest_name_value(value(10))]
  |                                          ^^^^^
